# polymarket-insider-detection

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: proxy_market_metadata.yml
data/labels/: curated_candidates.parquet  curated_final.csv  curated_final.parquet  curated_review.csv  manual_seed_cases.json  market_tradability.parquet  news_seeds.json  onchain_candidates_top.csv  unified_candidates.parquet  unified_candidates_review.csv
data/labels/incidents/: incidents.parquet  incidents_matched.parquet  (+1 more)
legacy/: README.md
legacy/scripts/: build_labels.py  scrape_reddit_callouts_v0.py  train_models.py
legacy/src/: labels_market_level.py
models/: lightgbm__feature_importance.csv  logreg__feature_importance.csv  randforest__feature_importance.csv  xgboost__feature_importance.csv
paper/: paper.tex  references.bib
results/: byron_cluster_case_study.md  byron_cluster_wallets.csv  case_study_candidates.md  model_results.csv  spike_hit_rate.csv
scripts/: analyze_byron_cluster.py  build_features.py  build_unified_candidates.py  canonicalize_callouts.py  case_study_report.py  classify_tradability.py  curate_candidates.py  enrich_catalog.py  expand_catalog.py  fetch_gamma_metadata.py  fetch_specific_markets.py  finalize_curated.py  link_callouts_to_markets.py  load_manual_seeds.py  make_figures.py  mine_onchain.py  refill_trades.py  run_pipeline.py  scrape_news.py  scrape_reddit.py  scrape_twitter.py  spike_hit_rate_analysis.py
src/pminsider/: collect.py  features.py  goldsky.py  labels.py  models.py  polygon_rpc.py  viz.py
(+18 files in other folders)
