[project]
name = "pminsider"
version = "0.0.1"
description = "Detecting informed trading in Polymarket prediction markets via on-chain volume and flow anomalies"
authors = [{name = "Benja-Pauls"}]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.65",
    "pyarrow>=15.0",
    "web3>=6.0",
    "networkx>=3.2",
    "curl_cffi>=0.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"
